# sigil

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  HACKATHON.md  README.md  Untitled  WORKFLOW.md  docker-compose.yaml  go.work  go.work.sum  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  sigil-eval-seed.example.yaml
.codex/environments/: environment.toml
.config/: Dockerfile.plugin  Dockerfile.sdk-traffic  Dockerfile.sigil  docker-compose-base.yaml
.cursor/commands/: babysitci.md  check.md  mergemain.md
.github/workflows/: ci.yml  plugins-publish.yml  plugins-push.yaml  plugins-push.yml  python-sdks-publish.yml  sigil-image-publish.yml  version-bump.yml
api/: go.mod  go.sum
apps/plugin/: .gitignore  CHANGELOG.md  eslint.config.js  go.mod  go.sum  jest-setup.js  package-lock.json  package.json  webpack.config.ts
charts/sigil/: Chart.yaml  README.md  values.yaml
config/alloy/: config.river
docs/: FRONTEND.md  PLANS.md  RELIABILITY.md  SECURITY.md  index.md  make-docs  variables.mk
docs/design-docs/: 2026-02-12-model-card-catalog-refresh.md  2026-02-12-phase-2-hybrid-storage.md  2026-02-12-phase-2-otel-sdk-query-storage.md  2026-02-12-phase-2-query-proxy.md  2026-02-13-sdk-parity-java.md  (+24 more)
scripts/: bootstrap-env.sh  compose_yaml.py  render-symphony-workflow.sh  run-assistant-offset.sh  run-sigil-worktree.sh
sdks/python-frameworks/shared/: pyproject.toml
sdks/python-frameworks/shared/sigil_sdk_frameworks/: __init__.py  handler.py
sigil/: Dockerfile  go.mod  go.sum
(+945 files in other folders)
