[project]
name = "sigil-sdk-frameworks"
version = "0.1.0"
description = "Shared handler logic for Sigil Python framework SDK packages"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "sigil-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["sigil_sdk_frameworks*"]

[tool.setuptools.package-data]
sigil_sdk_frameworks = ["py.typed"]
